# paging-simulator

./: .gitignore  CMakeLists.txt  README.md  analyze_repo.sh  input.txt  main  main.cpp  repo_analysis.txt
M3_Linear_Demand_Paging/: README.md  input.txt
M4_MultiLevel_Paging/: MultiLevel_Paging.cpp  README.md  input.txt
M5_Generic_N_Level_Paging/: Generic_Paging_64bit.cpp  README.md
M6_Inverted_Page_Table/: Inverted_Page_Table.cpp  README.md
docs/: M1.md  M2.md  TLB_IMPLEMENTATION.md  architecture.md  memory_concepts.md  milestones.md
milestones/: README.md
milestones/M3_Linear_Demand_Paging/: Linear_Demand_Paging_RAM.cpp
src/: main.cpp  main_m4.cpp  paging.h
tests/: test_smoke.sh
